<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BlankFragment"
    android:background="#fff"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_perm_identity_black_24dp"
        app:civ_border_width="2dp"
        android:layout_marginBottom="16dp"
        app:civ_border_color="#000"
        />
    <TextView
        android:id="@+id/tv_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/posts"
        android:layout_alignTop="@id/profile_image"
        android:layout_toEndOf="@id/profile_image"
        android:textColor="#000"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        />
    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/followers"
        android:layout_alignTop="@id/profile_image"
        android:layout_toEndOf="@id/tv_post"
        android:textColor="#000"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        />
    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/following"
        android:layout_alignTop="@id/profile_image"
        android:layout_toEndOf="@id/tv_followers"
        android:textColor="#000"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        />
    <TextView
        android:id="@+id/tv_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/post"
        android:layout_below="@id/tv_post"
        android:layout_alignStart="@id/tv_post"
        android:textColor="#A9A9A9"
        android:layout_marginBottom="8dp"
        />
    <TextView
        android:id="@+id/tv_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/follower"
        android:layout_below="@id/tv_followers"
        android:layout_alignStart="@id/tv_followers"
        android:textColor="#A9A9A9"
        android:layout_marginBottom="8dp"
        />
    <TextView
        android:id="@+id/tv_followings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/followings"
        android:layout_below="@id/tv_following"
        android:layout_alignStart="@id/tv_following"
        android:textColor="#A9A9A9"
        android:layout_marginBottom="8dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="#A9A9A9"
        android:textColor="#000"
        android:textSize="14sp"
        android:text="@string/edit"
        android:layout_below="@id/tv_posts"
        android:layout_marginTop="8dp"
        android:layout_alignEnd="@id/tv_followings"
        android:layout_alignStart="@id/tv_post"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_alignStart="@id/profile_image"
        android:textSize="16sp"
        android:text="@string/name"
        android:textColor="#000"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:id="@+id/tv_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_alignStart="@id/tv_name"
        android:textSize="14sp"
        android:textColor="#000"
        android:text="@string/bio"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:id="@+id/tv_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_bio"
        android:layout_alignStart="@id/tv_bio"
        android:textSize="14sp"
        android:text="@string/link"
        android:textColor="#135"
        android:layout_marginBottom="16dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/grid"
        android:layout_below="@id/tv_link"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:columnCount="3"
        android:rowCount="2"
        android:columnOrderPreserved="false"
        android:alignmentMode="alignMargins"
        android:padding="2dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="2dp"
            >
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/flower"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="2dp"
            >
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/flowers"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="2dp"
            >
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/flowers"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="2dp"
            >
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/flower"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="2dp"
            >
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/flower"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="2dp"
            >
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/flowers"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                />
        </androidx.cardview.widget.CardView>
    </GridLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nav"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav"
        app:itemBackground="@android:color/black"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        />
</RelativeLayout>
